tests/Rules/Structure/Fixtures/valid/table_th_with_content.html.twig
<table>
  <tr><th scope="col">Name</th><th scope="col">Age</th></tr>
  <tr><td>Alice</td><td>30</td></tr>
</table>
