tests/Rules/Structure/Fixtures/invalid/td_headers_missing_id.html.twig
{# 1 errors #}
<table>
  <tr>
    <th id="h">Head</th>
    <td headers="missing">Cell</td>
  </tr>
</table>
